2019/01/25 line chart add

--- a/templates/kakeiboapp/kakeibo_list.html
+++ b/templates/kakeiboapp/kakeibo_list.html
@@ -15,6 +15,9 @@
                 <li class="breadcrumb-item">
                     <a href="{% url 'kakeiboapp:kakeibo_circle' %}">円グラフ</a>
                 </li>
+                <li class="breadcrumb-item">
+                    <a href="{% url 'kakeiboapp:kakeibo_line' %}">チャート</a>
+                </li>
             </ol>
             <!--ページタイトル-->
             <div class="card mb-3">
